# MagBase

./: CMakeLists.txt  README.md  test-workflow.sh
docs/: commands.md  help-page.txt
src/: buffer.c  buffer.h  db-actions.c  db-init.c  db-init.h  globals.h  main.c  main.h  pageLayout.txt  records.c  records.h  schema.c  schema.h
src/structs/: bufferStruct.h  schemaStruct.h
